# JiPP2

./: CMakeLists.txt
allocation_basics/: CMakeLists.txt  main.cpp  pytanie.md
lab3/: CMakeLists.txt  main.cpp  zadania.cpp  zadania.h
lab4/: CMakeLists.txt  main.cpp  struktury_i_klasy.cpp  struktury_i_klasy.h
lab4/include/: funkcje.h  klasy.h  struktura.h
lab4/src/: funkcje.cpp  klasy.cpp  main.cpp
lab5/include/: Point.h
lab5/src/: Point.cpp  main.cpp
lab5/zad1/: CMakeLists.txt
lab5/zad1/include/: Point.h
lab5/zad1/src/: Point.cpp  main.cpp
lab5/zad2-auto/: CMakeLists.txt
lab5/zad2-auto/include/: car.h
lab5/zad2-auto/src/: car.cpp  main.cpp
lab5/zad3-gettery-settery/: class.cpp
lab6/: CMakeLists.txt
lab6/include/: class.h
lab6/src/: class.cpp  main.cpp
lab7/: CMakeLists.txt
lab7/include/: class.h
lab7/src/: class.cpp  main.cpp
matrixApp/: CMakeLists.txt
matrixApp/src/: main.cpp
matrixLib/: CMakeLists.txt
matrixLib/include/: matrixLib.h
matrixLib/src/: main.cpp  matrixLib.cpp
wisielec/: CMakeLists.txt  main.cpp
zadanie_domowe/include/: calc.h
zadanie_domowe/src/: calc.cpp  main.cpp
zadanie_domowe_lab2/: CMakeLists.txt
zadanie_domowe_lab2/src/: calc.cpp  main.cpp
