cmake_minimum_required(VERSION 3.16)

add_subdirectory(allocation_basics)
add_subdirectory(zadanie_domowe_lab2)
add_subdirectory(lab3)
add_subdirectory(lab4)
add_subdirectory(matrixLib)
add_subdirectory(matrixApp)
add_subdirectory(wisielec)
add_subdirectory(lab5/zad1)
add_subdirectory(lab5/zad2-auto)
